--- a/buy_anything/frontend/package.json
+++ b/buy_anything/frontend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "axios": "^1.6.8",
     "react-router-dom": "^5.2.0"
   }
 }
