--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "5.0"
+djangorestframework = "3.15.1"
+psycopg2 = "2.9.10"
+six = "1.16.0"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.1"
