--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "5.0"
 djangorestframework = "3.15.1"
 psycopg2 = "2.9.10"
 six = "1.16.0"
+django-cors-headers = "4.6.0"
 
 [dev-packages]
 
