--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "3.15.1"
 psycopg2 = "2.9.10"
 six = "1.16.0"
 django-cors-headers = "4.6.0"
+python-dotenv = "==1.0.1"
 
 [dev-packages]
 
