--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ psycopg2 = "2.9.10"
 six = "1.16.0"
 django-cors-headers = "4.6.0"
 python-dotenv = "==1.0.1"
+drf-yasg = "==1.21.8"
 
 [dev-packages]
 
